installed TinyMCE and added some content to the experience page.  Fixed a bug on the expand/collapse component

--- a/public/css/main/default.css
+++ b/public/css/main/default.css
@@ -151,3 +151,7 @@ pre {
     background-color:lightyellow;        
     color:#333;
 }
+.image{
+    position: relative;
+    width: 100%;
+}
