--- a/public/css/main/large.css
+++ b/public/css/main/large.css
@@ -79,8 +79,8 @@
   position:absolute;
   top:10px;
   margin-top:20px;
-  margin-left:15%;
-  width:70%;
+  margin-left:20%;
+  width:60%;
   background-color:white;
 }
 #pageTitle{
